# semantic-sweep

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
app/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
app/scripts/: validate.ts  validate_scanner.ts  validate_usage.ts
app/src/: App.tsx  Heatmap.tsx  SourcePanel.tsx  bands.ts  components.tsx  theme.css  useFocusTrap.ts
app/src/data/: auth.ts  fabric.ts
composite_demo/Sales Core.SemanticModel/: .platform
composite_demo/Sales Core.SemanticModel/definition/: model.tmdl
composite_demo/Sales Executive Cockpit.SemanticModel/: .platform
engine/: index.ts  lifecycle.ts  measures.ts  parser.ts  recommend.ts  scan.ts  scanner.ts  types.ts  usage.ts
rayfin-app/: .env.example  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
rayfin-app/rayfin/: rayfin.yml
rayfin-app/rayfin/data/: SavedScan.ts  ScanChunk.ts  ScanDecision.ts  schema.ts
rayfin-app/src/: App.tsx  ConnectGate.tsx  Heatmap.tsx  SourcePanel.tsx  bands.ts  components.tsx  csv.ts  daxDiff.ts  main.css  main.tsx  sample.ts  sampleUsage.ts  scanModeLabels.ts  theme.css  ui.tsx  usageDemo.ts
rayfin-app/src/__tests__/: banding.test.ts  bands.test.ts  clusters.test.ts  composite.test.ts  csv-export.test.ts  daxDiff.test.ts  deeplink.test.ts  engine-review-fixes.test.ts  heatmap.test.tsx  lifecycle.test.ts  parser.test.ts  physical-source-banding.test.ts  precision-recall.test.ts  precision.test.ts  recommend.test.ts  scan-identity.test.ts  scanStore-decisions.test.ts  scanner.test.ts  sweep-page-helpers.test.ts  token-refresh.test.ts  useFocusTrap.test.tsx
rayfin-app/src/data/: fabric.ts  (+6 more)
scripts/: build_dashboard.py  deploy_composite_demo.py  deploy_seed.py  enumerate_estate.py  export_models.py  make_parity_fixture.py  make_sample_models.py  make_seed_models.py  teardown_seed.py
semantic_sweep/: cli.py  lifecycle.py  measures.py  parser.py  report.py  score.py
tests/: test_calibration.py  test_clusters.py  test_dax_sanity.py  test_model_id_dedup.py  test_parser.py  test_physical_source_banding.py  test_precision.py  test_precision_recall.py  test_smoke.py
tests/fixtures/: sample_models.results.json
(+63 files in other folders)
